draft of header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,41 @@
 </head>
 <body>
 
-    <header>H</header>
+    <header class="container-fluid">
+        <div class="row">
+            <div id="starting" class="col-4 redbox  d-flex h100">
+                START BOOTSTRAP
+            </div>
+            <div class="col-4 offset-4 redbox d-flex h100">
+                <nav id="head-menu" class="d-flex">
+                    <ul class="d-flex">
+                        <li><a href="#">PORTFOLIO</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
     
-    <main>M</main>
+    <div class="jumbotron">
+        JUMBO
+    </div>
+
+    <main>
+
+        <section>
+            <div>Portfolio</div>
+        </section>
+        <section>
+            <div>About</div>
+        </section>
+        <section>
+            <div>Contact me</div>
+        </section>
+
+
+    </main>
 
     <footer>F</footer>
 
