draft of jumbotron

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         </div>
     </header>
     
-    <div class="jumbotron">
-        JUMBO
+    <div id="jumbo" class="jumbotron h500 redbox d-flex">
+        <div class="h300 redbox container">
+
+        </div>
     </div>
 
     <main>
