--- a/index.html
+++ b/index.html
@@ -33,18 +33,61 @@
     </header>
     
     <div id="jumbo" class="jumbotron h500 redbox d-flex">
-        <div class="h300 redbox container">
+        <div class="h300 redbox">
 
         </div>
     </div>
 
     <main>
-
-        <section>
-            <div>Portfolio</div>
+        <!-- PORTFOLIO SECTION -->
+        <section class="redbox h500">
+            <div class="h300 container-sm redbox">
+                <!-- title row -->
+                <div class="row">
+                    <div class="col-4 offset-4 redbox">
+                        <h3>Portfolio</h3>
+                        <div>Stelle e linea</div>
+                    </div>
+                </div>
+                <!-- images -->
+                <div class="row redbox">
+                    <div class="col-4 redbox">Img casa</div>
+                    <div class="col-4 redbox">Img torta</div>
+                    <div class="col-4 redbox">Img circo</div>
+                </div>
+                <!-- images -->
+                <div class="row redbox">
+                    <div class="col-4 redbox">Img joystick</div>
+                    <div class="col-4 redbox">Img cassaforte</div>
+                    <div class="col-4 redbox">Img sottomarino</div>
+                </div>
+            </div>
         </section>
-        <section>
-            <div>About</div>
+
+        <section class="redbox h500">
+            <div class="redbox h300 container-sm">
+                <div class="row redbox h100">
+                    <div class="col-4 offset-4">
+                        <h3>About</h3>
+                        <div>
+                            Stella e linea
+                        </div>
+                    </div>
+                </div>
+                <div class="row redbox h100">
+                    <div class="col-6">
+                        Primo p
+                    </div>
+                    <div class="col-6">
+                        Secondo p
+                    </div>
+                </div>
+                <div class="row redbox h100">
+                    <div class="col-12">
+                        <button>Download</button>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <div>Contact me</div>
