--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@
 </head>
 <body>
 
-   
+    <header>
+        <div class="container-fluid border">
+            <div class="row h100">
+                <div id="starting" class="col-6 justify-content-sm-center align-items-sm-center d-flex border">
+                    <p>START BOOTSTRAP</p>
+                </div>
+                <div id="head-menu" class="col-6 justify-content-sm-center align-items-sm-center d-flex border">
+                    <nav>
+                        <ul>
+                            <li>PORTFOLIO</li>
+                            <li>ABOUT</li>
+                            <li>CONTACT</li>
+                        </ul>
+                    </nav>
+                    <div id="hamburger">
+                        HAMBURGER
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
 </body>
 </html>
