draft of jumbotron

--- a/index.html
+++ b/index.html
@@ -37,5 +37,15 @@
         </div>
     </header>
 
+    <div id="jumbotron" class="redbox h500 d-flex">
+        <div class="border h500 w600 redbox"></div>
+    </div>
+
+
+    <main>
+
+    </main>
+
+
 </body>
 </html>
