--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
 
 
     <main>
+        <!-- PORTFOLIO SECTION -->
+        <section id="portfolio" class="redbox container">
+            <div class="row redbox">
+                <div class="col-12 border h300 redbox">
+                    <h3>Portfolio</h3>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                    immagine
+                </div>
+            </div>
+        </section>
 
     </main>
 
