form section draft

--- a/index.html
+++ b/index.html
@@ -70,6 +70,54 @@
             </div>
         </section>
 
+        <!-- ABOUT SECTION -->
+        <section id="about" class="redbox container">
+            <div class="row redbox">
+                <div class="col-12">
+                    <h3>About</h3>
+                </div>
+                <div class="col-10 offset-1 col-md-5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis suscipit reiciendis ut optio. Sequi consequuntur quis minus ex aperiam! A repellendus atque nisi explicabo nemo est vitae ad, soluta animi?</p>
+                </div>
+                <div class="col-10 offset-1 offset-md-0 col-md-5">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, atque illum sit, velit inventore placeat doloribus itaque esse mollitia ipsam voluptas, deserunt alias corrupti minus quis. Ad nemo vero repellat.</p>
+                </div>
+                <div class="col-12">
+                    <button>Download</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- FORM SECTION -->
+
+        <section id="form" class="redbox h500 border d-flex">
+            <div class="h300 w600 redbox border">
+                <div>
+                    <h3>Contact me</h3>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <label for="insertName">Name</label>
+                            <input type="text" name="" id="insertName">
+                        </li>
+                        <li>
+                            <label for="insertEmail">Email Address</label>
+                            <input type="email" id="insertEmail">
+                        </li>
+                        <li>
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="text" name="" id="phoneNumber">
+                        </li>
+                        <li>
+                            <label for="message">Message</label>
+                            <textarea name="" id="message" cols="30" rows="5"></textarea>
+                        </li>
+                    </ul>
+                    <button>Send</button>
+                </div>
+            </div>
+        </section>
     </main>
 
 
