--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                 <div class="col-12 border h300 redbox">
                     <h3>Portfolio</h3>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 border h300 redbox">
+                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
                     immagine
                 </div>
             </div>
@@ -120,6 +120,14 @@
         </section>
     </main>
 
+    <footer id="contact-info" class="redbox container h300">
+        <div class="row">
+            <div class="col-12 col-md-4">Location</div>
+            <div class="col-12 col-md-4">Socials</div>
+            <div class="col-12 col-md-4">About</div>
+            <div class="col-12">Copyright</div>
+        </div>
+    </footer>
 
 </body>
 </html>
