--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 
     <footer id="contact-info" class="redbox container h300">
         <div class="row">
-            <div class="col-12 col-md-4">Location</div>
-            <div class="col-12 col-md-4">Socials</div>
-            <div class="col-12 col-md-4">About</div>
-            <div class="col-12">Copyright</div>
+            <div class="col-12 col-md-4 d-flex justify-content-center">Location</div>
+            <div class="col-12 col-md-4 d-flex justify-content-center">Socials</div>
+            <div class="col-12 col-md-4 d-flex justify-content-center">About</div>
+            <div class="col-12 d-flex justify-content-center">Copyright</div>
         </div>
     </footer>
 
