better classes or footer, about and form section

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
         <section id="form" class="redbox h500 border d-flex">
             <div class="form-container">
-                <div class="h300 redbox border">
-                    <div>
+                <div class="redbox border">
+                    <div class="text-center">
                         <h3>Contact me</h3>
                     </div>
                     <div>
@@ -120,7 +120,11 @@
                                 <textarea name="" readonly class="form-control-plaintext" id="message" cols="30" rows="5"></textarea>
                             </li>
                         </ul>
-                        <button>Send</button>
+                        
+                        <div>
+                            <button>Send</button>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -130,10 +134,10 @@
 
     <footer id="contact-info" class="redbox container h300">
         <div class="row">
-            <div class="col-12 col-md-4 d-flex justify-content-center">Location</div>
-            <div class="col-12 col-md-4 d-flex justify-content-center">Socials</div>
-            <div class="col-12 col-md-4 d-flex justify-content-center">About</div>
-            <div class="col-12 d-flex justify-content-center">Copyright</div>
+            <div class="col-12 col-md-4 text-center">Location</div>
+            <div class="col-12 col-md-4 text-center">Socials</div>
+            <div class="col-12 col-md-4 text-center">About</div>
+            <div class="col-12 text-center">Copyright</div>
         </div>
     </footer>
 
