draft of jumbotron

--- a/index.html
+++ b/index.html
@@ -54,8 +54,19 @@
         </div>
     </header>
 
-    <div id="jumbotron" class="redbox h500 d-flex">
-        <div class="border h500 w600 redbox"></div>
+    <div id="jumbotron" class="h500 redbox d-flex">
+        <div class="border jumbo_box h500 d-flex">
+            <div id="jumbo_img">
+                <img src="img/avatar.svg" alt="">
+            </div>
+            <div>
+                START BOOTSTRAP
+            </div>
+            <div>--- stella ---</div>
+            <div>
+                <span>GRAPHIC ARTIST -</span><span> WEB DESIGNER -</span><span> ILLUSTRATOR</span>
+            </div>
+        </div>
     </div>
 
 
