draft of portfolio section

--- a/index.html
+++ b/index.html
@@ -72,28 +72,29 @@
 
     <main>
         <!-- PORTFOLIO SECTION -->
-        <section id="portfolio" class="redbox container">
-            <div class="row redbox">
-                <div class="col-12 border h300 redbox">
+        <section id="portfolio" class="container">
+            <div class="row">
+                <div class="col-12 text-center">
                     <h3>Portfolio</h3>
+                    <div>--- stella ---</div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/cake.png" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/circus.png" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/game.png" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/safe.png" alt="">
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 border h300 redbox">
-                    immagine
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img src="img/submarine.png" alt="">
                 </div>
             </div>
         </section>
