--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
+
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
@@ -100,12 +102,13 @@
         </section>
 
         <!-- ABOUT SECTION -->
-        <section id="about" class="redbox">
+        <section id="about">
             <div class="about-container">
                 <div class="container-fluid">
-                    <div class="row redbox text-center">
-                        <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 text-center">
                             <h3>About</h3>
+                            <div>--- stella ---</div>
                         </div>
                         <div class="col-12 col-md-6">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis suscipit reiciendis ut optio. Sequi consequuntur quis minus ex aperiam! A repellendus atque nisi explicabo nemo est vitae ad, soluta animi?</p>
@@ -114,7 +117,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, atque illum sit, velit inventore placeat doloribus itaque esse mollitia ipsam voluptas, deserunt alias corrupti minus quis. Ad nemo vero repellat.</p>
                         </div>
                         <div class="col-12 text-center">
-                            <button>Download</button>
+                            <button><i class="fa-solid fa-download"></i>Download</button>
                         </div>
                     </div>
                 </div>
