--- a/index.html
+++ b/index.html
@@ -127,29 +127,26 @@
 
         <!-- FORM SECTION -->
 
-        <section id="form" class="redbox h500 border d-flex">
+        <section id="form" class="d-flex">
             <div class="form-container">
-                <div class="redbox border">
+                <div>
                     <div class="text-center">
                         <h3>Contact me</h3>
+                        <div>--- stella ---</div>
                     </div>
                     <div>
                         <ul>
                             <li>
-                                <label for="insertName">Name</label>
-                                <input type="text" readonly class="form-control-plaintext" name="" id="insertName">
+                                <input type="text" readonly class="form-control-plaintext" name="" id="insertName" placeholder="Name">
                             </li>
                             <li>
-                                <label for="insertEmail">Email Address</label>
-                                <input type="email" readonly class="form-control-plaintext" id="insertEmail">
+                                <input type="email" readonly class="form-control-plaintext" id="insertEmail" placeholder="Email Address">
                             </li>
                             <li>
-                                <label for="phoneNumber">Phone Number</label>
-                                <input type="text" readonly class="form-control-plaintext" name="" id="phoneNumber">
+                                <input type="text" readonly class="form-control-plaintext" name="" id="phoneNumber" placeholder="Phone Number">
                             </li>
                             <li>
-                                <label for="message">Message</label>
-                                <textarea name="" readonly class="form-control-plaintext" id="message" cols="30" rows="5"></textarea>
+                                <textarea name="" readonly class="form-control-plaintext" id="message" cols="30" rows="5" placeholder="Message"></textarea>
                             </li>
                         </ul>
                         
