--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="jumbotron" class="h500 redbox d-flex">
         <div class="border jumbo_box h500 d-flex">
             <div id="jumbo_img">
-                <img src="img/avatar.svg" alt="">
+                <img src="img/avatar.svg" alt="avatar">
             </div>
             <div>
                 START BOOTSTRAP
@@ -161,12 +161,32 @@
         </section>
     </main>
 
-    <footer id="contact-info" class="redbox container h300">
+    <footer id="contact-info" class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-4 text-center">Location</div>
-            <div class="col-12 col-md-4 text-center">Socials</div>
-            <div class="col-12 col-md-4 text-center">About</div>
-            <div class="col-12 text-center">Copyright</div>
+            <div class="col-12 col-md-4 text-center">
+                <div class="contact-boxes">
+                    <h6>LOCATION</h6>
+                    <p>2215 John Daniel Drive Clark, MO 54243</p>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 text-center">
+                <div>
+                    <h6>AROUND THE WEB</h6>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-google-plus-g"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 text-center">
+                <div class="contact-boxes">
+                    <h6>ABOUT FREELANCER</h6>
+                    <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+                </div>
+            </div>
+            <div id="bottom_footer" class="col-12 text-center">
+                Copyright <i class="fa-solid fa-copyright"></i> Your Website 2019
+            </div>
         </div>
     </footer>
 
