completed #form and added star feature

--- a/index.html
+++ b/index.html
@@ -77,8 +77,22 @@
         <section id="portfolio" class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h3>Portfolio</h3>
-                    <div>--- stella ---</div>
+                    <h3>PORTFOLIO</h3>
+                    <div class="star-box">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <hr>
+                                </div>
+                                <div class="col">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <div class="col">
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/cabin.png" alt="">
@@ -107,8 +121,22 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <h3>About</h3>
-                            <div>--- stella ---</div>
+                            <h3>ABOUT</h3>
+                            <div class="star-box">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <hr>
+                                        </div>
+                                        <div class="col">
+                                            <i class="fa-solid fa-star"></i>
+                                        </div>
+                                        <div class="col">
+                                            <hr>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-12 col-md-6">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis suscipit reiciendis ut optio. Sequi consequuntur quis minus ex aperiam! A repellendus atque nisi explicabo nemo est vitae ad, soluta animi?</p>
@@ -131,8 +159,22 @@
             <div class="form-container">
                 <div>
                     <div class="text-center">
-                        <h3>Contact me</h3>
-                        <div>--- stella ---</div>
+                        <h3>CONTACT ME</h3>
+                        <div class="star-box">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col">
+                                        <hr>
+                                    </div>
+                                    <div class="col">
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                    <div class="col">
+                                        <hr>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <ul>
