--- a/index.html
+++ b/index.html
@@ -96,21 +96,39 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/cabin.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/cake.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/circus.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/game.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/safe.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <img src="img/submarine.png" alt="">
+                    <div class="imgs-over d-flex">
+                        <i class="fa-solid fa-plus"></i>
+                    </div>
                 </div>
             </div>
         </section>
