jumbotron completed, need to fix :hover effect of images (going out of border at different widths), everything else in place

--- a/index.html
+++ b/index.html
@@ -56,15 +56,29 @@
         </div>
     </header>
 
-    <div id="jumbotron" class="h500 redbox d-flex">
-        <div class="border jumbo_box h500 d-flex">
+    <div id="jumbotron" class="h500 d-flex">
+        <div class="jumbo_box h500 d-flex">
             <div id="jumbo_img">
                 <img src="img/avatar.svg" alt="avatar">
             </div>
             <div>
-                START BOOTSTRAP
+                <h1>START BOOTSTRAP</h1>
             </div>
-            <div>--- stella ---</div>
+            <div class="star-box">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                        </div>
+                        <div class="col">
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="col">
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div>
                 <span>GRAPHIC ARTIST -</span><span> WEB DESIGNER -</span><span> ILLUSTRATOR</span>
             </div>
